--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,16 @@
     top: 200px;
     left: 0;
     width: 100%;
-    transition: $transition;
+    animation: entrance 1s;
   }
+
+  @keyframes entrance {
+    0% {
+      top: 200px;
+    }
+    100% {
+      top: 0;
+    }
+  }
+
 }
